FEAT: basic form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,12 @@
 <div class="content" role="main">
 
   <div>
-    <span>{{ title }} app is running!</span>
+    <span>Welcome to the {{ title }}</span>
   </div>
+  <form><!--Angular has a special type of form. in the future update this to it-->
+    <input type="text" name="trainer-name" placeholder="Input your trainer name">
+    <button type="submit">Log in</button>
+  </form>
 
 </div>
 
