--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,6 +38,15 @@ button{
     margin: 10px;
     padding: 10px;
     font-weight: bold;
+    border-radius: 20px;
+    border: #1B2845 2px solid;
+    background-color: #FAFF81;
+}
+button:hover{
+    box-shadow: 0px 0px 3px;
+}
+button:active{
+    box-shadow: none;
 }
 form{
     display: flex;
@@ -45,6 +54,10 @@ form{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+}
+input{
+    border-radius: 20px;
+    border: #1B2845 2px solid;
 }
 
 footer{
