--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,55 +20,16 @@
     padding-left: 20px;
 }
 
-.content {
+.container{
     display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    flex-grow: 1;
-}
-input{
-    margin: 10px;
-    padding: 10px;
-}
-button{
-    margin: 10px;
-    padding: 10px;
-    font-weight: bold;
-    border-radius: 20px;
-    border: #1B2845 2px solid;
-    background-color: #FAFF81;
-}
-button:hover{
-    box-shadow: 0px 0px 3px;
-}
-button:active{
-    box-shadow: none;
-}
-form{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-input{
-    border-radius: 20px;
-    border: #1B2845 2px solid;
+    min-height: 100vh;
 }
 
 footer{
     background-color: #1B2845;
     height: 100px;
     width: 100%;
-    margin-top: 80px;
-}
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100vh;
+    margin-top: auto;
 }
