--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,7 +1,7 @@
 <h1>Welcome to the Pokemon Trainer</h1>
 
-<form>
+<form (ngSubmit)="submit()" [formGroup]="nameForm">
     <!--Angular has a special type of form. in the future update this to it-->
-    <input type="text" name="trainer-name" placeholder="Input your trainer name">
+    <input type="text" name="trainerName" placeholder="Input your trainer name" required formControlName="trainerName">
     <button type="submit">Log in</button>
 </form>
