FEAT: basic for loop works

--- a/src/app/catalogue-page/catalogue-page.component.html
+++ b/src/app/catalogue-page/catalogue-page.component.html
@@ -1,1 +1,4 @@
 <p>catalogue-page works!</p>
+<div class="catalogue">
+    <app-pokemon-view *ngFor="let pokemon of pokemons" [pokemon]="pokemon"></app-pokemon-view>
+</div> 
