FEAT: basic styling for the pokemons with name and image. basic styling also for the catalogue page

--- a/src/app/catalogue-page/catalogue-page.component.html
+++ b/src/app/catalogue-page/catalogue-page.component.html
@@ -1,4 +1,4 @@
-<p>catalogue-page works!</p>
+<h1>Pokemon catalogue</h1>
 <div class="catalogue">
     <app-pokemon-view *ngFor="let pokemon of pokemon$ | async" [pokemon]="pokemon"></app-pokemon-view>
 </div> 
