FEAT: page buttons for catalogue page and more styling

--- a/src/app/pokemon-view/pokemon-view.component.scss
+++ b/src/app/pokemon-view/pokemon-view.component.scss
@@ -3,3 +3,8 @@
     align-content: center;
     text-align: center;
 }
+button{
+    border: #1b2845 2px solid;
+    border-radius: 20px;    
+    background-color: #FFFFFC;
+}
