--- a/src/app/catalogue-page/catalogue-page.component.html
+++ b/src/app/catalogue-page/catalogue-page.component.html
@@ -1,4 +1,12 @@
-<h1>Pokemon catalogue</h1>
+<div class="settings">
+    <h1>Pokemon catalogue</h1>
+    <div class="buttons">
+        <button>-</button>
+        <h3>Page:</h3>
+        <h3>{{page}}</h3>
+        <button>+</button>
+    </div>
+</div>
 <div class="catalogue">
     <app-pokemon-view *ngFor="let pokemon of pokemon$ | async" [pokemon]="pokemon"></app-pokemon-view>
-</div> 
+</div>
