--- a/src/app/catalogue-page/catalogue-page.component.scss
+++ b/src/app/catalogue-page/catalogue-page.component.scss
@@ -16,8 +16,31 @@
     border: #1b2845 2px solid;
     border-radius: 20px;
     margin-left: 2vw;
+    background-color: #E08D79;
     margin-right: 2vw;
+    padding: 20px;
+}
+.settings{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 90%;
+    padding: 10px;
+}
+.buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+button{
+    background-color: #FFFFFC;
+    border: #1b2845 2px solid;
+    border-radius: 20px;
+    height: 30px;
+    width: 30px;
+    margin: 10px;
 }
 h1{
-    text-align: center;
+    flex-grow: 1;
 }
