--- a/src/app/pokemon-view/pokemon-view.component.html
+++ b/src/app/pokemon-view/pokemon-view.component.html
@@ -1,2 +1,4 @@
-<h3>{{pokemon?.name}}</h3>
-<img src={{pokemon?.imgUrl}} alt="">
+<button>
+    <h3>{{pokemon?.name}}</h3>
+    <img src={{pokemon?.imgUrl}} alt="">
+</button>
