--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,9 @@ body{
     margin: 0;
     background-color: #FFFFFC;
 }
+button:hover {
+    box-shadow: 0px 0px 4px;
+}
+button:active {
+    box-shadow: none;
+}
