FEAT: better scaling on the catalog page

--- a/src/app/catalogue-page/catalogue-page.component.html
+++ b/src/app/catalogue-page/catalogue-page.component.html
@@ -1,3 +1,4 @@
+<h3>Choose a pokemon from the catalogue and click on it to add it to your collection.</h3>
 <div class="settings">
     <h1>Pokemon catalogue</h1>
     <div class="buttons">
