--- a/src/app/catalogue-page/catalogue-page.component.scss
+++ b/src/app/catalogue-page/catalogue-page.component.scss
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     width: 90%;
     padding: 5px;
 }
@@ -32,6 +33,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
 }
 button{
     background-color: #FFFFFC;
@@ -42,7 +44,7 @@ button{
     margin: 10px;
 }
 h1{
-    flex-grow: 1;
+    text-align: center;
 }
 h3{
     padding: 2px;
