FEAT: navigation links to the header with hover styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div class="toolbar" role="banner">
   <span>Welcome</span>
+  <div class="links">
+    <a [routerLink]="['/catalogue']">Catalogue</a>
+    <a [routerLink]="['/trainer']">Trainer</a>
+  </div>
 </div>
 
 <div class="container">
