CHORE: styling for the trainer page. added additional fiel for extra info

--- a/src/app/trainer-page/trainer-page.component.html
+++ b/src/app/trainer-page/trainer-page.component.html
@@ -1,1 +1,13 @@
-<p>trainer-page works!</p>
+<h3>Here you can see your pokemon Collection. Click on a pokemon to view more info.</h3>
+<div class="headers">
+    <h1>Collected Pokemons</h1>
+    <h1>Additional info</h1>
+</div>
+<div class="collection">
+    <div class="catalogue">
+        <app-pokemon-view *ngFor="let pokemon of pokemon$ | async" [pokemon]="pokemon"></app-pokemon-view>
+    </div>
+    <div class="additional">
+        <h3>{{pokemon?.name}}</h3>
+    </div>
+</div>
