FEAT: onclick function for the pokemons

--- a/src/app/pokemon-view/pokemon-view.component.html
+++ b/src/app/pokemon-view/pokemon-view.component.html
@@ -1,4 +1,4 @@
-<button>
+<button (click)="pokemonCLick()">
     <h3>{{pokemon?.name}}</h3>
     <h4>{{'id: ' + pokemon?.id}}</h4>
     <img src={{pokemon?.imgUrl}} alt="">
