CHORE: placeholder function to find the current user

--- a/src/app/trainer-page/trainer-page.component.html
+++ b/src/app/trainer-page/trainer-page.component.html
@@ -1,4 +1,4 @@
-<h3>Here you can see your pokemon Collection. Click on a pokemon to view more info.</h3>
+<h3>Welcome: {{trainer$ | async}} Here you can see your pokemon Collection. Click on a pokemon to view more info.</h3>
 <div class="headers">
     <h1>Collected Pokemons</h1>
     <h1>Additional info</h1>
