--- a/src/app/trainer-page/trainer-page.component.scss
+++ b/src/app/trainer-page/trainer-page.component.scss
@@ -17,7 +17,7 @@
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     background-color: #e08d79;
-    max-height: 300px;
+    max-height: 450px;
     overflow-y: auto;
     padding: 20px;
 }
@@ -39,6 +39,12 @@
     background-color: #faff81;
     padding: 20px;
     margin-left: 20px;
+}
+.abilities-list {
+    list-style: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 h1,
 h3 {
