--- a/src/app/trainer-page/trainer-page.component.html
+++ b/src/app/trainer-page/trainer-page.component.html
@@ -1,13 +1,16 @@
 <h3>Welcome: {{trainer$ | async}} Here you can see your pokemon Collection. Click on a pokemon to view more info.</h3>
 <div class="headers">
     <h1>Collected Pokemons</h1>
-    <h1>Additional info</h1>
+    <h1 *ngIf="currentPokemon">Additional info</h1>
 </div>
 <div class="collection">
     <div class="catalogue">
         <app-pokemon-view *ngFor="let pokemon of pokemon$ | async" [pokemon]="pokemon"></app-pokemon-view>
     </div>
-    <div class="additional">
+    <div *ngIf="currentPokemon" class="additional">
+        <div>
+            <img src={{currentPokemon?.imgUrl}} alt="">
+        </div>
         <div>
             <h3>Name: </h3>
             <h3>{{currentPokemon?.name}}</h3>
