--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="toolbar" role="banner">
   <span>Welcome</span>
-  <div class="links">
+  <div class="links" *ngIf="(currentTrainer$ | async)?.username">
     <a [routerLink]="['/catalogue']">Catalogue</a>
     <a [routerLink]="['/trainer']">Trainer</a>
   </div>
