--- a/src/app/trainer-page/trainer-page.component.scss
+++ b/src/app/trainer-page/trainer-page.component.scss
@@ -56,6 +56,14 @@
     margin: 0;
     padding-left: 10px;
 }
+.btn {
+    margin: 10px;
+    border: #1b2845 2px solid;
+    border-radius: 10px;
+    background-color: rgb(255, 59, 59);
+    padding: 20px;
+    align-self: center;
+}
 h1,
 h3 {
     width: 100%;
