--- a/src/app/trainer-page/trainer-page.component.html
+++ b/src/app/trainer-page/trainer-page.component.html
@@ -1,5 +1,9 @@
-<h3>Welcome: {{(currentTrainer$ | async)?.username}} Here you can see your pokemon Collection. Click on a pokemon to view more info.</h3>
-<button *ngIf="(currentTrainer$ | async)?.pokemon?.length !== 0" class="btn" (click)="onClearPokemon()">Clear collected Pokemon</button>
+<div class="title">
+    <h3>Welcome: {{(currentTrainer$ | async)?.username}}. Here you can see your pokemon Collection. Click on a pokemon to view more info.</h3>
+    <button *ngIf="(currentTrainer$ | async)?.pokemon?.length !== 0" class="btn" (click)="onClearPokemon()">
+        Clear collected Pokemon
+    </button>
+</div>
 <div class="headers">
     <h1>Collected Pokemons</h1>
     <h1 *ngIf="currentPokemon">Additional info</h1>
